--- a/analisis_espectral.ipynb
+++ b/analisis_espectral.ipynb
@@ -67,7 +67,7 @@
     "from scipy.signal import tukey\n",
     "from ssn import get_response_files\n",
     "from scipy.optimize import curve_fit\n",
-    "from utils_sol import *"
+    "from utils import *"
    ]
   },
   {
