Michoacan notebook added.

--- a/analisis_espectral_Michoacan_2022.ipynb
+++ b/analisis_espectral_Michoacan_2022.ipynb
@@ -437,7 +437,7 @@
     }
    ],
    "source": [
-    "# Estimate the spectrum\n",
+    "# Estima el espectro\n",
     "\n",
     "fig3, ax3 = plt.subplots(1, 1, figsize=(12, 6))\n",
     "Aspec = {}\n",
